<resources>
    <string name="app_name">모두의\n보드게임</string>
    <string name="mainbutton">시작하기</string>
    <string name="addbutton">추가하기</string>
    <string name="hintgamename">게임 이름</string>
    <string name="hintevaluate">총평</string>
    <string name="hintshortmemo">메모</string>
    <string name="addtitle">후기 추가하기</string>
    <string name="account">나의 후기</string>
    <string name="tohome">홈으로</string>
    <string name="halligalli0">할리갈리에는 딸기, 바나나, 라임, 자두 4종류의 과일이 등장한다. 카드에는 과일이 1개에서 5개까지 그려져 있다. 먼저, 카드를 잘 섞은 뒤 모두 똑같이 카드를 나눠 갖는다.</string>
    <string name="halligalli1">플레이어들은 각자 나눠 받은 카드를 그림이 보이지 않게 뒤집고 잘 섞은 다음 카드 더미를 만들어 자기 앞에 둔다.</string>
    <string name="halligalli2">순서에 따라 돌아가면서 차례인 플레이어는 자기 카드 더미에서 맨 위에 있는 카드를 1장 펼친다. 카드를 펼칠 때는 상대방이 먼저 볼 수 있도록 바깥쪽으로 펼쳐야 한다.</string>
    <string name="halligalli3">한 종류의 과일이 5개가 되면 누구나 종을 칠 수 있다. 종을 가장 먼저 친 플레이어는 그때까지 펼쳐진 카드들을 가져가 자기 카드 더미 밑에 넣는다. 종을 칠 상황이 아닌데 실수로 종을 잘못 친 경우에는 다른 플레이어 모두에게 자기 카드 더미에 있는 카드를 1장씩 나눠줘야 한다.</string>
    <string name="halligalli4">게임을 진행하다가 자기 차례에 더 이상 펼칠 카드가 없는 플레이어는 게임에서 탈락한다. 2명의 플레이어가 남았다면, 단판 승부로 게임의 승자가 결정된다. 단판 승부는 과일이 5개가 됐을 때 종을 쳐 쌓여 있는 카드를 모두 가져가거나, 누군가 실수를 해 쌓여 있는 카드를 모두 상대 플레이어에게 주게 되면 종료된다. 최종적으로 가장 카드를 많이 가진 플레이어가 승리한다.</string>
    <string name="davinch0">게임을 시작하기 전에 모든 타일을 숫자가 보이지 않도록 뒤집어 섞는다. 각 플레이어는 26개의 타일 중 4개씩을 무작위로 가져와 다른 플레이어가 보지 못하도록 세워두고, 남은 타일들은 더미로 만들어 모아둔다.</string>
    <string name="davinch1">자기가 가져온 숫자 타일들은 순서에 맞게 배열해야 한다. 타일을 배열할 때는 왼쪽에서 오른쪽으로 갈수록 큰 숫자가 오도록 한다. 같은 숫자의 흰색, 검은색 타일을 가지고 있을 경우에는 검은색이 왼쪽, 흰색이 오른쪽에 오도록 배치한다. 단, 조커 타일은 이 규칙에 상관없이 아무 곳에나 놓을 수 있다. 게임의 목표는 내 코드를 모두 들키기 전에 다른 플레이어들의 숫자 코드를 모두 밝혀내는 것이다. 자기 차례에 해야 할 일은 딱 두 가지다. 첫째, 타일 더미에서 타일 하나를 가져온 뒤 내 타일들 사이에 타일 배열 규칙에 따라 배치한다. 둘째, 상대방의 타일이 무엇인지 추리하고 타일 하나를 지목해 숫자를 외친다. 추리가 맞았을 경우 상대방은 지목된 타일을 숫자가 보이게 눕혀 모두에게 공개한다. </string>
    <string name="davinch2">추리가 틀렸을 경우, 정답을 틀린 플레이어가 더미에서 가져왔던 타일을 숫자가 보이게 눕혀 모두에게 공개한다. 추리를 틀렸을 경우에는 즉시 차례를 넘겨야 하지만, 추리가 맞았을 때는 계속해서 다른 사람의 타일을 추리할지, 추리를 끝내고 차례를 넘길지 선택할 수 있다. 계속해서 추리할 경우 타일을 한 번 더 지목하는데, 추리에 또 성공했다면 추가로 계속 차례를 진행할 수 있다. 이론적으로는 첫 차례에서 연속으로 추리를 진행해 게임을 끝내는 것도 가능하다. 물론 도중에 한 번이라도 추리가 틀리면 이번 차례에 가져왔던 타일을 공개하고 차례를 넘겨야 한다. 추리를 계속하지 않고 차례를 넘길 경우에는 내 타일을 공개하지 않기 때문에 내가 가진 코드에 대한 정보를 덜 노출할 수 있다. 게임을 진행하다 보면 코드가 하나하나 드러나고, 드러난 정보를 바탕으로 더 상세한 추리를 할 수 있다. 예를 들어 상대방 중 누군가가 검은색 2 타일을 가진 것이 공개되었고 상대방 시점에서 검은색 타일 왼쪽에 흰색 타일이 하나 있다고 가정하자. 왼쪽에 있는 숫자는 검은색 2 타일보다 작은 숫자다. 따라서 그 흰색 타일은 0 또는 1, 또는 조커라고 추리할 수 있다. 이렇게 해서 상대방의 코드를 하나씩 풀어나가면 된다. 차례를 계속 진행하다가 자기가 가진 코드가 모두 밝혀진 플레이어는 게임에서 탈락한다. 한 사람만 남고 모두가 탈락하면, 최후까지 풀리지 않은 코드를 가진 플레이어가 게임에서 승리한다.</string>
    <string name="rummikub0">루미큐브는 숫자 1부터 13까지 4가지 색(빨강, 주황, 파랑, 검정)의 타일 2세트와 조커 타일 2개로 이루어져 있다. 총 106개의 타일을 섞어 7개씩 쌓고, 각자 14개의 타일을 가져가 자신의 받침대에 정렬해 놓는다. 차례마다 자기가 가진 타일을 조합해 내려놓거나, 더미에서 타일 하나를 새로 가져와 내 받침대에 추가한다. 타일을 내려놓으려면 같은 숫자의 다른 색깔 타일이나 같은 색깔의 다른 연속된 숫자로 3개의 이상의 타일을 조합해야 한다. 단, 최초로 타일을 내려놓을 때는 내려놓는 타일의 내려놓는 타일의 숫자 합이 30 이상이어야 하는데 이것을 등록이라 한다. 두 세트 이상의 조합을 내려놓아 그 합계를 30 이상으로 맞춰도 된다. 등록 이후에는 숫자 합과 관계없이 타일 조합을 내려놓을 수 있으며, 조건이 맞는다면 기존에 내려놓은 조합에 타일을 낱개로 붙여 내려놓을 수도 있다.</string>
    <string name="rummikub1">기존의 조합을 해체해 재조합하는 방식으로 타일을 내려놓는 것도 가능하다. 예를 들어, 3이 4개 붙어있는 타일에서 빨간색 3을 떼어낸 후, 내가 가진 빨간색 1, 2 타일을 붙이는 식이다. 이런 방식으로 여러 개의 조합을 분해, 재조합할 수 있다. 하지만 1분이라는 제한시간이 있으며, 조합이 완벽하게 만들어지지 않을 경우, 즉 새로 조합되지 않고 남은 타일이 생길 경우에는 벌칙으로 타일 3개를 가져가게 되니 신중해야 한다.</string>
    <string name="rummikub2">루미큐브에는 숫자 타일 외에 조커 타일이 있는데, 이 타일을 사용하면 조합을 더 원활하게 만들 수 있다. 조커는 색상과 무관하게 사용할 수 있으나, 게임이 끝날 때까지 들고 있다가 지면 큰 마이너스 점수를 받는다. 최종적으로 자기 타일을 모두 내려놓는 시점에서 승부가 결정되기 때문에, 경우에 따라서는 내려놓을 수 있는 조합이 있어도 내려놓지 않고 그냥 타일을 새로 하나 가져오는 전법도 유용하다. 누군가 자신의 타일을 전부 내려놓고 루미큐브라고 외치면 즉시 게임이 끝난다. 나머지 플레이어들은 자신이 가진 타일의 숫자 합을 마이너스 점수로 받고, 승자는 모든 사람의 마이너스 점수를 플러스 점수로 가져온다.</string>
    <string name="bang0">게임을 시작하기 전에 참여 인원에 따라 역할 카드를 골라 섞은 후, 각 플레이어에게 한 장씩 안 보이게 나눠준다. 역할 카드를 받고 나면 보안관은 자기 역할 카드를 공개하고, 나머지 사람들은 자신의 역할을 공개하지 않는다.</string>
    <string name="bang1">역할 카드와 별도로 인물 카드를 한 장씩 나눠 받는다. 인물 카드에는 각각의 특수 능력과 생명력이 표시되어있다. 각자 인물 카드의 표시에 따라 생명력을 의미하는 총알 토큰을 가져오고, 보안관은 인물 카드에 표시된 생명력 외에 총알 토큰을 하나 더 추가로 받는다. 다음으로 게임 카드를 잘 섞어 각자가 가진 총알 토큰만큼 나누어주고, 나머지 게임 카드를 뒷면으로 쌓아 더미로 만들어놓으면 준비가 끝난다. 보안관을 제외한 모든 사람의 정체가 비공개인 상태로 게임을 시작하지만, 게임에 이기기 위해서는 최대한 서로의 역할을 추리해야 한다. 무법자는 보안관과 부관을 처치해야 승리하고, 배신자는 부관과 무법자를 모두 처치한 후 마지막으로 보안관을 처치해야 승리하며, 부관은 보안관을 끝까지 지켜내야 승리한다. 차례는 보안관부터 시작한다. 자신의 차례에는 더미에서 게임 카드 2장을 받고, 자기가 원하는 만큼 가지고 있는 게임 카드를 사용할 수 있다. 단, 뱅! 카드는 한 차례에 1장밖에 쓸 수 없다는 제약이 있다. 카드를 필요한 만큼 사용하고 나면, 다음 플레이어에게 차례를 넘긴다.</string>
    <string name="bang2">뱅!은 카드를 적극적으로 활용하는 게임으로, 상대방을 공격하거나 탈락시키는 행동을 모두 카드로 수행한다. 상대방을 공격하는 대표적인 카드인 뱅!은 거리에 따라 사용할 수 있는 범위가 정해진다. 자신을 기준으로 양옆 플레이어가 거리1, 그 건너 플레이어가 거리2가 되는데, 이 거리에 맞는 총을 가지고 있어야 상대방을 공격할 수 있다. 상대방이 나와 다른 편이라고 짐작하고 있어도, 거리에 맞는 총이 없으면 꼼짝없이 당할 수밖에 없다.</string>
    <string name="bang3">상대방이 뱅!을 내게 사용했다면 빗나감!을 내서 피하거나 술통을 이용해 방어할 수 있다. 이외에도 상대방이 차례를 쉬게 만드는 감옥이나 모두에게 피해를 주는 기관총, 생명력을 채워주는 맥주, 모두에게 카드를 1장씩 가져가게 하는 잡화점, 한 번에 생명력 3개를 깎는 다이너마이트 등 특수한 카드가 있다. 보안관/부관, 무법자, 배신자 중 한 팀이 승리 조건을 달성하면 즉시 게임이 끝나고 그 팀이 승리한다.</string>
    <string name="splender0">뒷면의 색이 다른 3종의 개발 카드를 각각 더미로 만든 후 잘 섞어 일렬로 늘어놓고, 다시 더미마다 카드를 4장씩 오른쪽에 펼쳐놓는다. 6가지 색의 보석 토큰을 한곳에 모아두고 인원수에 따라 귀족 타일을 배치하면 준비가 끝난다. 보석 토큰을 모아둔 곳을 게임 중에는 공동 창고라고 칭한다.</string>
    <string name="splender1">이 게임의 목표는 점수가 붙어있는 개발 카드나 귀족 타일을 모아 15점 이상을 득점하는 것이다. 점수는 개발 카드나 귀족 타일의 왼쪽 상단에 흰색 숫자로 표기되어 있는데, 개발 카드의 경우 점수를 주지 않는 카드도 있다. 귀족 타일을 가져오려면 개발 카드를 세트로 모아야 하고, 개발 카드를 가져오려면 보석 토큰을 세트로 모아야 한다. 자기 차례에는 3가지 행동 중 하나를 골라서 할 수 있다. 첫째는 개발 카드를 구입하기 위한 보석을 모으는 것이다. 게임에는 6가지 종류의 보석이 있는데 사파이어(파란색), 다이아몬드(흰색), 에메랄드(초록색), 루비(빨간색), 줄마노(검정색), 황금(노란색)이다.</string>
    <string name="splender2">보석 토큰을 가져가는 방법은 다시 두 가지로 나뉜다. 플레이어들은 황금을 제외한 보석 중 서로 다른 종류의 보석을 3개 가져가거나, 한 종류의 보석을 2개 가져가는 것 중에 선택할 수 있다. 다만, 한 종류의 보석을 가져가려면 그 보석이 공동 창고에 4개 이상 남아있어야 한다. 보석은 여러 개 모아둘 수 있으나, 한 사람이 가질 수 있는 보석은 최대 10개이므로 주의해야 한다. 가져온 보석은 모두가 볼 수 있게 공개한다.</string>
    <string name="splender3">둘째, 이렇게 가져온 보석을 사용해 개발 카드를 구입할 수 있다. 개발 카드는 게임의 최종 목적인 점수 획득을 하기 가장 좋은 수단이다. 개발 카드는 테이블에 각 단계별로 4장씩 펼쳐져 있기 때문에 누구나 확인할 수 있다. 개발 카드를 구입하려면 카드의 왼쪽 밑에 적혀있는 비용을 지불해야 한다. 구입할 때는 표시된 비용만큼 보석을 공동 창고에 반납하고 카드를 자신의 앞에 둔다. 개발 카드의 기능은 한 가지 더 있다. 개발 카드를 구입하면 그 이후에 다른 개발 카드를 구입할 때, 구입한 개발 카드 오른쪽 위에 그려져 있는 보석을 할인받을 수 있다. 개발 카드를 많이 보유하면 할인 혜택을 중첩해서 받으므로, 추후에 개발 카드를 구입하는 데 더욱 유리하다.</string>
    <string name="splender4">셋째, 지금은 구입할 수 없지만 반드시 구입해야 하는 카드가 있다면, 남들이 가져가기 전에 먼저 선점할 수 있다. 공동 창고에 있는 황금을 1개 가져가고, 원하는 카드를 손으로 들고 가면 된다. 황금은 아무 보석으로나 사용할 수 있는 조커의 역할을 한다. 이렇게 손에 들고 간 카드는 나중에 자신의 차례가 돌아왔을 때, 다른 개발 카드를 구입할 때처럼 비용을 지불하고 내려놓을 수 있다. 하지만 손에는 최대 3장의 카드만 들고 있을 수 있기 때문에, 이미 3장을 손에 들고 있다면 이 행동을 할 수 없으니 주의해야 한다.</string>
    <string name="splender5">자기 차례를 끝낼 때 특정 조건이 충족되었다면, 귀족 타일을 한 장 가져올 수 있다. 귀족 타일을 가져오기 위한 조건은 각 귀족 타일의 왼쪽 하단에 표시되어 있는데, 조건은 특정 종류의 개발 카드 여러 장으로 된 세트다. 자신이 그 귀족 타일이 요구하는 개발 카드를 모두 모았다면 그 귀족 타일을 가져와서 자신의 앞에 둔다. 귀족 타일은 다른 기능은 없지만 3점을 준다. 누군가가 자기 차례를 마치고 15점 이상을 달성했다면, 맨 마지막 순서로 게임을 플레이한 사람까지 차례를 진행하고 게임을 마친다. 게임을 종료한 시점에서 점수가 가장 높은 플레이어가 승리한다.</string>
    <string name="splender6">누군가 15점 이상을 달성해도 바로 게임이 종료되지는 않기 때문에 게임이 어떻게 진행되어도 모든 플레이어가 가지는 기회의 수는 똑같다.</string>
</resources>