<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".baseactivities.AddActivity">

    <TextView
        android:id="@+id/addtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addtitle"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_gamename"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:hint="@string/hintgamename"
        app:layout_constraintTop_toTopOf="@id/addtitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="text"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/edittext_evaluate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:hint="@string/hintevaluate"
        app:layout_constraintTop_toTopOf="@id/edittext_gamename"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="text"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/edittext_shortmemo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:hint="@string/hintshortmemo"
        app:layout_constraintTop_toTopOf="@id/edittext_evaluate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="text"
        android:autofillHints="no" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/addbutton"
        android:textSize="18sp"
        android:layout_marginTop="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/edittext_shortmemo" />

</androidx.constraintlayout.widget.ConstraintLayout>