<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gamedescription.SplenderActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/black"
                android:text="@string/tohome"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imagesplender0"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/splender0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_back"
                app:srcCompat="@drawable/splender0" />

            <TextView
                android:id="@+id/textsplender0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/splender0"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagesplender0" />

            <ImageView
                android:id="@+id/imagesplender1"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/splender1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textsplender0"
                app:srcCompat="@drawable/splender1" />

            <TextView
                android:id="@+id/textsplender1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/splender1"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagesplender1" />

            <ImageView
                android:id="@+id/imagesplender2"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/splender2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textsplender1"
                app:srcCompat="@drawable/splender2" />

            <TextView
                android:id="@+id/textsplender2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/splender2"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagesplender2" />

            <ImageView
                android:id="@+id/imagesplender3"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/splender3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textsplender2"
                app:srcCompat="@drawable/splender3" />

            <TextView
                android:id="@+id/textsplender3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/splender3"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagesplender3" />

            <ImageView
                android:id="@+id/imagesplender4"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/splender4"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textsplender3"
                app:srcCompat="@drawable/splender4" />

            <TextView
                android:id="@+id/textsplender4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/splender4"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagesplender4" />

            <ImageView
                android:id="@+id/imagesplender5"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/splender5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textsplender4"
                app:srcCompat="@drawable/splender5" />

            <TextView
                android:id="@+id/textsplender5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/splender5"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagesplender5" />

            <ImageView
                android:id="@+id/imagesplender6"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/splender6"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textsplender5"
                app:srcCompat="@drawable/splender6" />

            <TextView
                android:id="@+id/textsplender6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/splender6"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagesplender6" />



        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>