<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gamedescription.HalligalliActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/black"
                android:text="@string/tohome"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <VideoView
                android:id="@+id/videohalligalli"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintTop_toBottomOf="@id/button_back" />

            <ImageView
                android:id="@+id/imagehalligalli0"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/halligalli0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/videohalligalli"
                app:srcCompat="@drawable/halligalli0" />

            <TextView
                android:id="@+id/texthalligalli0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/halligalli0"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagehalligalli0" />

            <ImageView
                android:id="@+id/imagehalligalli1"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/halligalli1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/texthalligalli0"
                app:srcCompat="@drawable/halligalli1" />

            <TextView
                android:id="@+id/texthalligalli1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/halligalli1"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagehalligalli1" />

            <ImageView
                android:id="@+id/imagehalligalli2"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/halligalli2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/texthalligalli1"
                app:srcCompat="@drawable/halligalli2" />

            <TextView
                android:id="@+id/texthalligalli2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/halligalli2"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagehalligalli2" />

            <ImageView
                android:id="@+id/imagehalligalli3"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/halligalli3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/texthalligalli2"
                app:srcCompat="@drawable/halligalli3" />

            <TextView
                android:id="@+id/texthalligalli3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/halligalli1"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagehalligalli3" />

            <ImageView
                android:id="@+id/imagehalligalli4"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/halligalli4"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/texthalligalli3"
                app:srcCompat="@drawable/halligalli4" />

            <TextView
                android:id="@+id/texthalligalli4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/halligalli4"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagehalligalli4" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>