<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gamedescription.BangActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/black"
                android:text="@string/tohome"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <VideoView
                android:id="@+id/videobang"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintTop_toBottomOf="@id/button_back" />

            <ImageView
                android:id="@+id/imagebang0"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/bang0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/videobang"
                app:srcCompat="@drawable/bang0" />

            <TextView
                android:id="@+id/textbang0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/bang0"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagebang0" />

            <ImageView
                android:id="@+id/imagebang1"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/bang1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textbang0"
                app:srcCompat="@drawable/bang1" />

            <TextView
                android:id="@+id/textbang1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/bang1"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagebang1" />

            <ImageView
                android:id="@+id/imagebang2"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/bang2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textbang1"
                app:srcCompat="@drawable/bang2" />

            <TextView
                android:id="@+id/textbang2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/bang2"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagebang2" />

            <ImageView
                android:id="@+id/imagebang3"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/bang3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textbang2"
                app:srcCompat="@drawable/bang3" />

            <TextView
                android:id="@+id/textbang3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/bang3"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagebang3" />



        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>